[project]
name = "mcio_ctrl"
version = "1.5.2.dev0"
description = "Python interface to connect to the MCio Minecraft mod"
readme = "README.md"
authors = [
    { name = "TwoTurtles", email = "97465192+twoturtles@users.noreply.github.com" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=26.2.0",
    "cbor2>=5.6.5",
    "glfw>=2.7.0",
    "PyOpenGL>=3.1.7",
    "gymnasium>=1.0.0",
    "pillow>=11.0.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "minecraft-launcher-lib>=7.1",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "ruamel.yaml>=0.18.6",
    "dacite>=1.8.1",
    "NBT>=1.5.1",
]

[build-system]
requires = ["uv_build>=0.7.12,<0.8"]
build-backend = "uv_build"

[project.urls]
Source = "https://github.com/twoturtles/mcio_ctrl"
Issues = "https://github.com/twoturtles/mcio_ctrl/issues"
Changelog = "https://github.com/twoturtles/mcio_ctrl/blob/main/CHANGELOG.md"

[project.scripts]
mcio = "mcio_ctrl.scripts.mcio_cmd:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
    "black>=24.10.0",
    "pip",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "isort>=5.13.2",
]

[tool.isort]
profile = "black"
